[package]
name = "soroban-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
# Re-enable axum "ws" when implementing SSE/WebSocket (tracked in issue #83).
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
anyhow = "1.0.102"
url = "2"
tower-governor = { version = "0.8", features = ["axum"] }
